--- a/twitch.html
+++ b/twitch.html
@@ -27,11 +27,15 @@
         }
     }
     </style>
-    <!-- <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script> -->
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script type="text/javascript" src="twitch/twitch.js"></script>
+    <!--[if lte IE 9]>
     <script src="https://cdn.bootcss.com/jquery/1.9.0/jquery.min.js"></script>
     <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery-ajaxtransport-xdomainrequest/1.0.0/jquery.xdomainrequest.min.js'></script>
+    <script src="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="twitch/twitch.js"></script>
+    <![endif]-->
 </head>
 
 <body>
