Replace twitch logo
Replace twitch logo in header area

--- a/twitch.html
+++ b/twitch.html
@@ -41,7 +41,7 @@
 <body>
     <div id="container" class="container-fluid">
         <div id="headArea" class="headArea">
-            <img src="twitch/img/myLogo.png">
+            <img src="twitch/img/twitchLogo.png">
             <div class="titleArea">
                 <h1 class="myTitle">
                     <a target="_blank" href="https://www.mike652638.com/twitch-code.html">TWITCH-推奇直播</a>
